syntax = "proto3";

import "graph.proto";

package router;

message RoutingSettings {
  double bus_wait_time = 1;
  double bus_velocity = 2;
}

message StopAsEdge {
  uint64 in = 1;
  uint64 out = 2;
  double wait = 3;
}

message StopsToIds {
  string stop_name = 1;
  StopAsEdge stop_as_edge = 2;
}

message WaitItem{
	string stop_name = 1;
	double time = 2;
}

message BusItem{
	string bus_name = 1;
	uint64 span_count = 2;
	double time = 3;
}

message RouteItem{
	uint64 id = 1;
	oneof item{
		WaitItem wait_item = 2;
		BusItem bus_item = 3;
	}
}

message Router {
  RoutingSettings routing_settings = 1;
  transport_catalogue.Graph graph = 2;
  repeated StopsToIds stops_to_ids = 3;
  repeated RouteItem route_items = 4;
}